--- a/container-p3/index.html
+++ b/container-p3/index.html
@@ -6,9 +6,13 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
-    <title>BrackPoint</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>container | cdm</title>
   </head>
   <body>
+    <div class="container"></div>
+    <div class="container-fluid"></div>
+    <div class="container-lg"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
