--- a/downloadingBootstrap-p1/2ed-way-download/index.html
+++ b/downloadingBootstrap-p1/2ed-way-download/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Hello, world!</h1>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
