--- a/components-p12/index.html
+++ b/components-p12/index.html
@@ -18,6 +18,20 @@
             <li class="breadcrumb-item"><a href="#">about</a></li>
             <li class="breadcrumb-item"><a href="#">service</a></li>
           </ol>
+          <h1>this is someting <span class="badge bg-dark">new</span></h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae
+            minima totam sapiente repudiandae odio rem perferendis voluptates
+            nobis nam blanditiis, quod ad ipsa illo at sed nemo, aperiam ullam
+            quisquam.
+          </p>
+          <button class="btn btn-info">learn more</button>
+          <button class="btn btn-dark">
+            massage <span class="badge bg-gradient">9</span>
+          </button>
+          <button class="btn btn-lg btn-outline-dark">
+            massage <span class="badge bg-info-subtle">9</span>
+          </button>
         </div>
       </div>
     </div>
